syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.iohk.atala.mirror.protos";

package trisa.protocol.v1alpha1;

message CardanoData {
  string source = 1;
  string destination = 2;
  int64 amount = 3;
}